# qt-heif-image-plugin

./: .gitignore
src/: CMakeLists.txt
